# llm-ops-sandbox

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  llm.py  main.py  metrics.py
docs/: architecture.md  backend-status.md  benchmark-v0.4.0.md  benchmark-v0.9.0.md  ci-mirror.md  contributing.md  github-actions.md  gitlab-ci.md  gitops.md  gpu-monitoring.md  kubernetes-local.md  observability.md  ollama-local.md  privacy-and-ethics.md  roadmap.md  runbook-latency.md  runbook-llm-backend-down.md  validation-v0.10.0.md  validation-v0.11.0.md  validation-v0.2.0.md  validation-v0.3.0.md  validation-v0.3.1.md  validation-v0.4.0.md  validation-v0.5.0.md  validation-v0.6.0.md  validation-v0.7.0.md  validation-v0.8.0.md  validation-v0.8.1.md  validation-v0.9.0.md  versioning.md  vllm-runtime.md  vllm.md
gitops/local/: README.md  helmrelease-monitoring-example.yaml  kustomization.yaml  source.yaml
k8s/base/: configmap.yaml  deployment.yaml  service.yaml
k8s/vllm/: configmap.yaml  deployment.yaml  (+1 more)
scripts/: check.py  check_github_actions.py  check_gitlab_ci.py  check_gitops_manifests.py  check_k8s_manifests.py  check_k8s_overlays.py  check_monitoring_config.py  check_vllm_manifests.py  export_api_docs.py  gpu_metrics_exporter.py
tests/: conftest.py  test_api_docs.py  test_backend_status.py  test_chat_mock.py  test_config.py  test_gpu_metrics_exporter.py  test_health.py  test_metrics.py  test_ollama_integration.py
(+12 files in other folders)
